# tonic-named-pipe-example

./: Cargo.toml
