[package]
name = "tonic_named_pipe_example"
edition = "2021"

[build-dependencies]
tonic-build = "0.12.3"

[dependencies]
prost = "0.13.3"
tonic = "0.12.3"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
futures-core = "0.3.31"
async-stream = "0.3.6"
tower = "0.5.1"
hyper-util = { version = "0.1.9", features = ["tokio"] }
windows = { version = "0.58.0", features = ["Win32"] }
